feat: enable mongo cache

--- a/notebooks/SUFC Summary.ipynb
+++ b/notebooks/SUFC Summary.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "ae903493-9121-4b48-94a0-88a41653ed12",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "id": "0864d10b-e34a-446e-b7d4-20ca86588fa7",
    "metadata": {},
    "outputs": [],
@@ -31,17 +31,18 @@
     "sys.path.append('..')\n",
     "from wyscout.team import get_team_squad, get_player_stats\n",
     "from dotenv import load_dotenv\n",
+    "from wyscout.api import set_auth\n",
     "load_dotenv()\n",
     "from PIL import Image\n",
     "import requests\n",
     "from io import BytesIO\n",
-    "import math\n",
-    "set_cache_base(\"..\")"
+    "import matplotlib.pyplot as plt\n",
+    "import math"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "6318fa3e-9a52-4e95-8945-2538327b4895",
    "metadata": {},
    "outputs": [],
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "701ddb53-9fbc-479b-89c7-5c0b0fe1870d",
    "metadata": {},
    "outputs": [],
@@ -66,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "93f0b171-14c0-4b47-97ff-2552587fe7dd",
    "metadata": {},
    "outputs": [],
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "828729d7-4738-48a8-b853-f887ee2fff29",
    "metadata": {},
    "outputs": [],
@@ -92,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "id": "87b52808-a992-46d5-82c7-b5f5b0ff0813",
    "metadata": {},
    "outputs": [],
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "id": "534303a8-3e64-4573-a320-e46526e62b5b",
    "metadata": {},
    "outputs": [],
@@ -112,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 23,
    "id": "a565d10d-d289-4d7d-85c7-1914abae2be1",
    "metadata": {},
    "outputs": [
@@ -150,7 +151,7 @@
        " 'T. Adedoja']"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 24,
    "id": "a92000c3-7cc3-4458-a66f-95729a1c84a5",
    "metadata": {},
    "outputs": [
@@ -198,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 25,
    "id": "02d4f9b6-1b7e-43d2-8995-8f4ec12ed81b",
    "metadata": {},
    "outputs": [
