--- a/notebooks/Fantasy Squads.ipynb
+++ b/notebooks/Fantasy Squads.ipynb
@@ -1673,7 +1673,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sufc-stats--ixh6ZGa-py3.10",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1687,11 +1687,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.6"
   },
   "vscode": {
    "interpreter": {
-    "hash": "4bd51136f4f0742e88d47ba19f61f17d20fefe351c486af9fff60544e0aa8aff"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
