feat: early 2023/24 update

--- a/notebooks/Fantasy Squads.ipynb
+++ b/notebooks/Fantasy Squads.ipynb
@@ -10,10 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "cdf2a357-e39f-4f1f-8561-f19bddc1d151",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -21,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "5cccc503-ea70-4293-81ce-9d58a0eb8b98",
    "metadata": {},
    "outputs": [],
@@ -37,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "aed4f011-068a-4fb6-a234-fb8fd9311a69",
    "metadata": {},
    "outputs": [],
@@ -50,7 +59,214 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
+   "id": "0d3bb43d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'wyId': 364,\n",
+       "  'name': 'Premier League',\n",
+       "  'area': {'id': 826,\n",
+       "   'alpha2code': 'EN',\n",
+       "   'alpha3code': 'XEN',\n",
+       "   'name': 'England'},\n",
+       "  'format': 'Domestic league',\n",
+       "  'type': 'club',\n",
+       "  'category': 'default',\n",
+       "  'gender': 'male',\n",
+       "  'divisionLevel': 1},\n",
+       " {'wyId': 361,\n",
+       "  'name': 'Non League Premier',\n",
+       "  'area': {'id': 826,\n",
+       "   'alpha2code': 'EN',\n",
+       "   'alpha3code': 'XEN',\n",
+       "   'name': 'England'},\n",
+       "  'format': 'Domestic league',\n",
+       "  'type': 'club',\n",
+       "  'category': 'default',\n",
+       "  'gender': 'male',\n",
+       "  'divisionLevel': 1},\n",
+       " {'wyId': 365,\n",
+       "  'name': \"Women's Premier League\",\n",
+       "  'area': {'id': 826,\n",
+       "   'alpha2code': 'EN',\n",
+       "   'alpha3code': 'XEN',\n",
+       "   'name': 'England'},\n",
+       "  'format': 'Domestic league',\n",
+       "  'type': 'club',\n",
+       "  'category': 'default',\n",
+       "  'gender': 'female',\n",
+       "  'divisionLevel': 1},\n",
+       " {'wyId': 366,\n",
+       "  'name': \"Women's National League - Premier Division\",\n",
+       "  'area': {'id': 826,\n",
+       "   'alpha2code': 'EN',\n",
+       "   'alpha3code': 'XEN',\n",
+       "   'name': 'England'},\n",
+       "  'format': 'Domestic league',\n",
+       "  'type': 'club',\n",
+       "  'category': 'default',\n",
+       "  'gender': 'female',\n",
+       "  'divisionLevel': 3},\n",
+       " {'wyId': 347,\n",
+       "  'name': 'Premier League Division One Women',\n",
+       "  'area': {'id': 826,\n",
+       "   'alpha2code': 'EN',\n",
+       "   'alpha3code': 'XEN',\n",
+       "   'name': 'England'},\n",
+       "  'format': 'Domestic league',\n",
+       "  'type': 'club',\n",
+       "  'category': 'default',\n",
+       "  'gender': 'female',\n",
+       "  'divisionLevel': 1},\n",
+       " {'wyId': 367,\n",
+       "  'name': 'Premier Reserve League',\n",
+       "  'area': {'id': 826,\n",
+       "   'alpha2code': 'EN',\n",
+       "   'alpha3code': 'XEN',\n",
+       "   'name': 'England'},\n",
+       "  'format': 'Domestic league',\n",
+       "  'type': 'club',\n",
+       "  'category': 'default',\n",
+       "  'gender': 'male',\n",
+       "  'divisionLevel': 1},\n",
+       " {'wyId': 363,\n",
+       "  'name': 'U18 Premier League',\n",
+       "  'area': {'id': 826,\n",
+       "   'alpha2code': 'EN',\n",
+       "   'alpha3code': 'XEN',\n",
+       "   'name': 'England'},\n",
+       "  'format': 'Domestic league',\n",
+       "  'type': 'club',\n",
+       "  'category': 'U18',\n",
+       "  'gender': 'male',\n",
+       "  'divisionLevel': 1},\n",
+       " {'wyId': 1290,\n",
+       "  'name': 'U21 Premier League Division 1 (OLD)',\n",
+       "  'area': {'id': 826,\n",
+       "   'alpha2code': 'EN',\n",
+       "   'alpha3code': 'XEN',\n",
+       "   'name': 'England'},\n",
+       "  'format': 'Domestic league',\n",
+       "  'type': 'club',\n",
+       "  'category': 'U21',\n",
+       "  'gender': 'male',\n",
+       "  'divisionLevel': 1},\n",
+       " {'wyId': 1467,\n",
+       "  'name': 'Premier League Cup',\n",
+       "  'area': {'id': 826,\n",
+       "   'alpha2code': 'EN',\n",
+       "   'alpha3code': 'XEN',\n",
+       "   'name': 'England'},\n",
+       "  'format': 'Domestic cup',\n",
+       "  'type': 'club',\n",
+       "  'category': 'U23',\n",
+       "  'gender': 'male',\n",
+       "  'divisionLevel': 0},\n",
+       " {'wyId': 1536,\n",
+       "  'name': 'Suffolk FA Premier Cup',\n",
+       "  'area': {'id': 826,\n",
+       "   'alpha2code': 'EN',\n",
+       "   'alpha3code': 'XEN',\n",
+       "   'name': 'England'},\n",
+       "  'format': 'Domestic cup',\n",
+       "  'type': 'club',\n",
+       "  'category': 'default',\n",
+       "  'gender': 'male',\n",
+       "  'divisionLevel': 0},\n",
+       " {'wyId': 1531,\n",
+       "  'name': 'Northern Premier League Challenge Cup',\n",
+       "  'area': {'id': 826,\n",
+       "   'alpha2code': 'EN',\n",
+       "   'alpha3code': 'XEN',\n",
+       "   'name': 'England'},\n",
+       "  'format': 'Domestic cup',\n",
+       "  'type': 'club',\n",
+       "  'category': 'default',\n",
+       "  'gender': 'male',\n",
+       "  'divisionLevel': 0},\n",
+       " {'wyId': 1661,\n",
+       "  'name': 'Manchester Premier Cup',\n",
+       "  'area': {'id': 826,\n",
+       "   'alpha2code': 'EN',\n",
+       "   'alpha3code': 'XEN',\n",
+       "   'name': 'England'},\n",
+       "  'format': 'Domestic cup',\n",
+       "  'type': 'club',\n",
+       "  'category': 'default',\n",
+       "  'gender': 'male',\n",
+       "  'divisionLevel': 0},\n",
+       " {'wyId': 1694,\n",
+       "  'name': 'U21 Premier League Division 2 (OLD)',\n",
+       "  'area': {'id': 826,\n",
+       "   'alpha2code': 'EN',\n",
+       "   'alpha3code': 'XEN',\n",
+       "   'name': 'England'},\n",
+       "  'format': 'Domestic league',\n",
+       "  'type': 'club',\n",
+       "  'category': 'U21',\n",
+       "  'gender': 'male',\n",
+       "  'divisionLevel': 2},\n",
+       " {'wyId': 3336,\n",
+       "  'name': 'Somerset Premier Cup',\n",
+       "  'area': {'id': 826,\n",
+       "   'alpha2code': 'EN',\n",
+       "   'alpha3code': 'XEN',\n",
+       "   'name': 'England'},\n",
+       "  'format': 'Domestic cup',\n",
+       "  'type': 'club',\n",
+       "  'category': 'default',\n",
+       "  'gender': 'male',\n",
+       "  'divisionLevel': 0},\n",
+       " {'wyId': 42983,\n",
+       "  'name': 'U18 Premier League Cup',\n",
+       "  'area': {'id': 826,\n",
+       "   'alpha2code': 'EN',\n",
+       "   'alpha3code': 'XEN',\n",
+       "   'name': 'England'},\n",
+       "  'format': 'Domestic cup',\n",
+       "  'type': 'club',\n",
+       "  'category': 'U18',\n",
+       "  'gender': 'male',\n",
+       "  'divisionLevel': 0},\n",
+       " {'wyId': 42969,\n",
+       "  'name': 'Premier League 2',\n",
+       "  'area': {'id': 826,\n",
+       "   'alpha2code': 'EN',\n",
+       "   'alpha3code': 'XEN',\n",
+       "   'name': 'England'},\n",
+       "  'format': 'Domestic league',\n",
+       "  'type': 'club',\n",
+       "  'category': 'U23',\n",
+       "  'gender': 'male',\n",
+       "  'divisionLevel': 1},\n",
+       " {'wyId': 42970,\n",
+       "  'name': 'Premier League 2 Division Two',\n",
+       "  'area': {'id': 826,\n",
+       "   'alpha2code': 'EN',\n",
+       "   'alpha3code': 'XEN',\n",
+       "   'name': 'England'},\n",
+       "  'format': 'Domestic league',\n",
+       "  'type': 'club',\n",
+       "  'category': 'U23',\n",
+       "  'gender': 'male',\n",
+       "  'divisionLevel': 2}]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[c for c in get_competitions(ENGLAND)[\"competitions\"] if \"Premier\" in c[\"name\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "2d2fb152-9db9-4c4e-9485-edad0baab2cd",
    "metadata": {},
    "outputs": [],
@@ -65,7 +281,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
+   "id": "f44fc75a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(wy_players)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "a715135e-c020-4d38-8939-89205c6ae85a",
    "metadata": {},
    "outputs": [],
@@ -83,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "e27a4a25-1e1b-4c4f-a84e-a5b390f224cc",
    "metadata": {},
    "outputs": [
@@ -91,7 +328,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "429\n"
+      "0\n"
      ]
     }
    ],
@@ -112,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "0c6f9905-6814-45df-b1f6-50bcda48a1ee",
    "metadata": {},
    "outputs": [],
@@ -123,10 +360,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "ff1b262d-c1e0-4feb-acfe-86eb7a7e1bb9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m data \u001b[39m=\u001b[39m get_player_stats(ws_mapped_players[\u001b[39m0\u001b[39;49m][\u001b[39m\"\u001b[39m\u001b[39mwyId\u001b[39m\u001b[39m\"\u001b[39m], SEASON_2022, PREMIER_LEAGUE, STD_SEASON)\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
     "data = get_player_stats(ws_mapped_players[0][\"wyId\"], SEASON_2022, PREMIER_LEAGUE, STD_SEASON)"
    ]
@@ -1687,7 +1936,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.4"
   },
   "vscode": {
    "interpreter": {
