--- a/notebooks/misc.ipynb
+++ b/notebooks/misc.ipynb
@@ -109,6 +109,252 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'wyId': 43545,\n",
+       "  'name': 'National League U19 Alliance',\n",
+       "  'area': {'id': 826,\n",
+       "   'alpha2code': 'EN',\n",
+       "   'alpha3code': 'XEN',\n",
+       "   'name': 'England'},\n",
+       "  'format': 'Domestic league',\n",
+       "  'type': 'club',\n",
+       "  'category': 'U19',\n",
+       "  'gender': 'male',\n",
+       "  'divisionLevel': 1},\n",
+       " {'wyId': 351,\n",
+       "  'name': 'National League',\n",
+       "  'area': {'id': 826,\n",
+       "   'alpha2code': 'EN',\n",
+       "   'alpha3code': 'XEN',\n",
+       "   'name': 'England'},\n",
+       "  'format': 'Domestic league',\n",
+       "  'type': 'club',\n",
+       "  'category': 'default',\n",
+       "  'gender': 'male',\n",
+       "  'divisionLevel': 5},\n",
+       " {'wyId': 350,\n",
+       "  'name': 'National League N / S',\n",
+       "  'area': {'id': 826,\n",
+       "   'alpha2code': 'EN',\n",
+       "   'alpha3code': 'XEN',\n",
+       "   'name': 'England'},\n",
+       "  'format': 'Domestic league',\n",
+       "  'type': 'club',\n",
+       "  'category': 'default',\n",
+       "  'gender': 'male',\n",
+       "  'divisionLevel': 5}]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from wyscout.competitions import get_competitions, get_competition_seasons\n",
+    "\n",
+    "[comp for comp in get_competitions(\"XEN\")[\"competitions\"] if comp[\"name\"].startswith(\"National League\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'competitionId': 351,\n",
+       " 'seasons': [{'seasonId': '190045',\n",
+       "   'season': {'wyId': 190045,\n",
+       "    'name': '2024/2025',\n",
+       "    'startDate': '2024-08-05',\n",
+       "    'endDate': '2025-05-13',\n",
+       "    'active': False,\n",
+       "    'competitionId': 351}},\n",
+       "  {'seasonId': '189051',\n",
+       "   'season': {'wyId': 189051,\n",
+       "    'name': '2023/2024',\n",
+       "    'startDate': '2023-08-05',\n",
+       "    'endDate': '2024-05-13',\n",
+       "    'active': True,\n",
+       "    'competitionId': 351}},\n",
+       "  {'seasonId': '188172',\n",
+       "   'season': {'wyId': 188172,\n",
+       "    'name': '2022/2023',\n",
+       "    'startDate': '2022-08-06',\n",
+       "    'endDate': '2023-05-13',\n",
+       "    'active': False,\n",
+       "    'competitionId': 351}},\n",
+       "  {'seasonId': '187596',\n",
+       "   'season': {'wyId': 187596,\n",
+       "    'name': '2021/2022',\n",
+       "    'startDate': '2021-08-21',\n",
+       "    'endDate': '2022-06-05',\n",
+       "    'active': False,\n",
+       "    'competitionId': 351}},\n",
+       "  {'seasonId': '186314',\n",
+       "   'season': {'wyId': 186314,\n",
+       "    'name': '2020/2021',\n",
+       "    'startDate': '2020-10-03',\n",
+       "    'endDate': '2021-06-20',\n",
+       "    'active': False,\n",
+       "    'competitionId': 351}},\n",
+       "  {'seasonId': '185826',\n",
+       "   'season': {'wyId': 185826,\n",
+       "    'name': '2019/2020',\n",
+       "    'startDate': '2019-08-03',\n",
+       "    'endDate': '2020-05-13',\n",
+       "    'active': False,\n",
+       "    'competitionId': 351}},\n",
+       "  {'seasonId': '185590',\n",
+       "   'season': {'wyId': 185590,\n",
+       "    'name': '2018/2019',\n",
+       "    'startDate': '2018-08-04',\n",
+       "    'endDate': '2019-05-13',\n",
+       "    'active': False,\n",
+       "    'competitionId': 351}},\n",
+       "  {'seasonId': '181192',\n",
+       "   'season': {'wyId': 181192,\n",
+       "    'name': '2017/2018',\n",
+       "    'startDate': '2017-08-05',\n",
+       "    'endDate': '2018-05-13',\n",
+       "    'active': False,\n",
+       "    'competitionId': 351}},\n",
+       "  {'seasonId': '10872',\n",
+       "   'season': {'wyId': 10872,\n",
+       "    'name': '2016/2017',\n",
+       "    'startDate': '2016-08-06',\n",
+       "    'endDate': '2017-05-14',\n",
+       "    'active': False,\n",
+       "    'competitionId': 351}},\n",
+       "  {'seasonId': '9553',\n",
+       "   'season': {'wyId': 9553,\n",
+       "    'name': '2015/2016',\n",
+       "    'startDate': '2015-08-08',\n",
+       "    'endDate': '2016-05-15',\n",
+       "    'active': False,\n",
+       "    'competitionId': 351}},\n",
+       "  {'seasonId': '8390',\n",
+       "   'season': {'wyId': 8390,\n",
+       "    'name': '2014/2015',\n",
+       "    'startDate': '2014-08-09',\n",
+       "    'endDate': '2015-05-17',\n",
+       "    'active': False,\n",
+       "    'competitionId': 351}},\n",
+       "  {'seasonId': '7291',\n",
+       "   'season': {'wyId': 7291,\n",
+       "    'name': '2013/2014',\n",
+       "    'startDate': '2013-08-10',\n",
+       "    'endDate': '2014-05-18',\n",
+       "    'active': False,\n",
+       "    'competitionId': 351}},\n",
+       "  {'seasonId': '6231',\n",
+       "   'season': {'wyId': 6231,\n",
+       "    'name': '2012/2013',\n",
+       "    'startDate': '2012-08-10',\n",
+       "    'endDate': '2013-05-05',\n",
+       "    'active': False,\n",
+       "    'competitionId': 351}},\n",
+       "  {'seasonId': '3444',\n",
+       "   'season': {'wyId': 3444,\n",
+       "    'name': '2011/2012',\n",
+       "    'startDate': '2011-08-12',\n",
+       "    'endDate': '2012-05-20',\n",
+       "    'active': False,\n",
+       "    'competitionId': 351}},\n",
+       "  {'seasonId': '3443',\n",
+       "   'season': {'wyId': 3443,\n",
+       "    'name': '2010/2011',\n",
+       "    'startDate': '2010-08-14',\n",
+       "    'endDate': '2011-05-21',\n",
+       "    'active': False,\n",
+       "    'competitionId': 351}},\n",
+       "  {'seasonId': '3442',\n",
+       "   'season': {'wyId': 3442,\n",
+       "    'name': '2009/2010',\n",
+       "    'startDate': '2009-08-08',\n",
+       "    'endDate': '2010-05-16',\n",
+       "    'active': False,\n",
+       "    'competitionId': 351}},\n",
+       "  {'seasonId': '3441',\n",
+       "   'season': {'wyId': 3441,\n",
+       "    'name': '2008/2009',\n",
+       "    'startDate': '2008-08-08',\n",
+       "    'endDate': '2009-05-17',\n",
+       "    'active': False,\n",
+       "    'competitionId': 351}},\n",
+       "  {'seasonId': '3440',\n",
+       "   'season': {'wyId': 3440,\n",
+       "    'name': '2007/2008',\n",
+       "    'startDate': '2007-08-11',\n",
+       "    'endDate': '2008-05-18',\n",
+       "    'active': False,\n",
+       "    'competitionId': 351}},\n",
+       "  {'seasonId': '3439',\n",
+       "   'season': {'wyId': 3439,\n",
+       "    'name': '2006/2007',\n",
+       "    'startDate': '2006-08-12',\n",
+       "    'endDate': '2007-05-20',\n",
+       "    'active': False,\n",
+       "    'competitionId': 351}},\n",
+       "  {'seasonId': '3438',\n",
+       "   'season': {'wyId': 3438,\n",
+       "    'name': '2005/2006',\n",
+       "    'startDate': '2005-08-13',\n",
+       "    'endDate': '2006-05-20',\n",
+       "    'active': False,\n",
+       "    'competitionId': 351}},\n",
+       "  {'seasonId': '3437',\n",
+       "   'season': {'wyId': 3437,\n",
+       "    'name': '2004/2005',\n",
+       "    'startDate': '2004-08-14',\n",
+       "    'endDate': '2005-05-14',\n",
+       "    'active': False,\n",
+       "    'competitionId': 351}},\n",
+       "  {'seasonId': '3436',\n",
+       "   'season': {'wyId': 3436,\n",
+       "    'name': '2003/2004',\n",
+       "    'startDate': '2003-08-09',\n",
+       "    'endDate': '2004-05-09',\n",
+       "    'active': False,\n",
+       "    'competitionId': 351}},\n",
+       "  {'seasonId': '3435',\n",
+       "   'season': {'wyId': 3435,\n",
+       "    'name': '2002/2003',\n",
+       "    'startDate': '2002-08-17',\n",
+       "    'endDate': '2003-05-10',\n",
+       "    'active': False,\n",
+       "    'competitionId': 351}}],\n",
+       " 'competition': {'wyId': 351,\n",
+       "  'name': 'National League',\n",
+       "  'area': {'id': 826,\n",
+       "   'alpha2code': 'EN',\n",
+       "   'alpha3code': 'XEN',\n",
+       "   'name': 'England'},\n",
+       "  'format': 'Domestic league',\n",
+       "  'type': 'club',\n",
+       "  'category': 'default',\n",
+       "  'gender': 'male',\n",
+       "  'divisionLevel': 5}}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_competition_seasons(351)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
